--- a/public/theme/europeana-cope/views/_teaser_persons.twig
+++ b/public/theme/europeana-cope/views/_teaser_persons.twig
@@ -9,7 +9,7 @@
 
 {% set filterpersons = (module.filter_persons)|default('') %}
 
-<article class="teaser teaser-persons group">
+<article class="teaser teaser-persons group" data-tpl="vtsp{{ item.id }}">
     <div class="img-container">
 
         {% if item.values.image is defined and item.values.image is not empty and item.values.image.file|default() != "" %}
