--- a/public/theme/europeana-cope/views/_detail_persons.twig
+++ b/public/theme/europeana-cope/views/_detail_persons.twig
@@ -5,7 +5,7 @@
 
             <article class="column main-column">
 
-                <div class="group card personal h-card">
+                <div class="group card personal h-card" data-tpl="vdp{{ item.id }}">
                     <div class="img-container">
                         {% if record.values.image is defined and record.values.image is not empty and record.values.image.file|default() != "" %}
                             <img class="card-img personal-img u-photo" src="{{ record.values.image|default('notfound')|thumbnail(450, 450, 'c') }}" alt="Portrait of {{ record.first_name }} {{ record.last_name }}" />
