--- a/public/theme/europeana-cope/views/_listingtable_persons.twig
+++ b/public/theme/europeana-cope/views/_listingtable_persons.twig
@@ -5,7 +5,7 @@
 {# {{ dump(item) }} #}
 
 
-<tr>
+<tr data-tpl="vltrp{{ item.id }}">
     <td><a href="{{ item.link() }}">{{ item.first_name }} {{ item.last_name }}</a></td>
 
     <td><span class="table-label">Company:</span> {{ item.company|default('Unknown') }}</td>
