--- a/public/theme/europeana-cope/views/_mini_externalcontact.twig
+++ b/public/theme/europeana-cope/views/_mini_externalcontact.twig
@@ -1,4 +1,4 @@
-<div class="author-small group">
+<div class="author-small group" data-tpl="vmec{{ item.id }}">
     {% if record.values.image is defined and record.values.image is not empty %}
         {# getting values.image to prevent fallback -> https://github.com/bolt/bolt/issues/6798 #}
         <img class="round" src="{{ record.values.image|thumbnail(72, 72, 'c') }}" alt=""/>
