--- a/public/theme/europeana-cope/views/_mini_persons.twig
+++ b/public/theme/europeana-cope/views/_mini_persons.twig
@@ -3,7 +3,7 @@
 {% endif %}
 
 {% if (item is not empty) and (item.last_name is not empty) %}
-<div class="author-small group">
+<div class="author-small group" data-tpl="vmp{{ item.id }}">
     {% if item.values.image is defined and item.values.image is not empty and item.values.image.file|default() != "" %}
         <img class="round" src="{{ item.values.image|default('notfound')|thumbnail(72, 72, 'c') }}" alt="portrait of {{ item.first_name }} {{ item.last_name }}"/>
     {% else %}
