--- a/public/theme/europeana-cope/views/_teaser_author.twig
+++ b/public/theme/europeana-cope/views/_teaser_author.twig
@@ -3,7 +3,7 @@
 {% endif %}
 
 {% if (item is not empty) and (item.last_name is not empty) %}
-<section class="author-big column group">
+<section class="author-big column group" data-tpl="vta{{ item.id }}">
     <div class="img-container">
         {% if item.values.image is defined and item.values.image is not empty and item.values.image.file|default() != "" %}
             <img class="round" src="{{ item.values.image|default('notfound')|thumbnail(144, 144, 'c') }}" alt="Portrait of {{item.first_name}} {{item.last_name}}"/>
